<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/time_left"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/question_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/question_interval"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/play_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/record_toggle"
        android:layout_alignRight="@+id/record_toggle"
        android:layout_alignTop="@+id/question_interval"
        android:layout_marginTop="48dp"
        android:onClick="play_note"
        android:text="@string/play_note" />

    <ToggleButton
        android:id="@+id/record_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/generate_question_button"
        android:layout_alignRight="@+id/generate_question_button"
        android:layout_below="@+id/play_note_button"
        android:layout_marginTop="19dp"
        android:textOff="@string/input_pitch"
        android:textOn="@string/recording" />

    <Button
        android:id="@+id/generate_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_toggle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:onClick="generate_question"
        android:text="@string/next_question" />

    <Button
        android:id="@+id/play_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/generate_question_button"
        android:layout_alignRight="@+id/generate_question_button"
        android:layout_centerVertical="true"
        android:layout_marginTop="80dp"
        android:text="@string/play_answer"
        android:onClick="play_answer"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/answer_pitch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_pitch_label"
        android:layout_below="@+id/user_pitch_label"
        android:text="Answer Pitch:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/answer_pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answer_pitch_label"
        android:layout_alignBottom="@+id/answer_pitch_label"
        android:layout_alignLeft="@+id/freq"
        android:text="-"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/user_pitch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/countdown"
        android:layout_below="@+id/play_answer"
        android:layout_marginRight="22dp"
        android:layout_marginTop="34dp"
        android:text="Your Pitch:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer_pitch"
        android:layout_toRightOf="@+id/user_pitch_label"
        android:text="-"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="155dp"
        android:layout_marginLeft="31dp"
        android:text="Corrects"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="121dp"
        android:text="Incorrects"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/num_incorrects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/play_answer"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/num_corrects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/num_incorrects"
        android:layout_toLeftOf="@+id/play_answer"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>